--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+# Ignore as pastas de compilação
+release*/
+debug*/
+
+# Qt-es
+/.qmake.cache
+/.qmake.stash
+*.pro.user
+*.pro.user.*
+*.moc
+moc_*.cpp
+qrc_*.cpp
+ui_*.h
+Makefile*
+*-build-*
+
+# QtCreator
+*.autosave
+
+#QtCtreator Qml
+*.qmlproject.user
+*.qmlproject.user.*
+
+# workspace files are user-specific
+*.sublime-workspace
+
+#sftp configuration file
+sftp-config.json
+
 # Compiled Object files
 *.slo
 *.lo
